feat: add tests, middleware and updated project structure
