# src/routes/arena.js
@@ -1,9 +1,10 @@
 const express = require('express');
 const router = express.Router();
+const auth = require('../middleware/auth');
+const rbac = require('../middleware/rbac');
 const { createArena, getVendorsByArena } = require('../controllers/arenaController');
-const auth = require('../../middleware/auth');
 
-router.post('/', auth('admin'), createArena);
-router.get('/:id/vendors', auth(), getVendorsByArena);
+router.post('/', auth, rbac(['admin']), createArena);
+router.get('/:id/vendors', auth, getVendorsByArena);
 
 module.exports = router;
