# src/routes/assign.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const router = express.Router();
+const auth = require('../middleware/auth');
+const rbac = require('../middleware/rbac');
 const { assignVendor } = require('../controllers/assignController');
-const auth = require('../../middleware/auth');
 
-router.post('/', auth('admin'), assignVendor);
+router.post('/', auth, rbac(['admin']), assignVendor);
 
 module.exports = router;
