# src/routes/index.js
@@ -1,4 +1,3 @@
-
 const express = require('express');
 const router = express.Router();
 
@@ -9,9 +8,5 @@ const assignRoutes = require('./assign');
 router.use('/arena', arenaRoutes);
 router.use('/vendor', vendorRoutes);
 router.use('/assign', assignRoutes);
-
-router.get('/', (req, res) => {
-  res.json({ message: 'Welcome to Arena Vendor Management API' });
-});
 
 module.exports = router;
